# quakespasm

./: CMakeLists.txt
Quake/: common.c  gl_vidsdl.c  in_sdl.c  main_sdl.c  pl_linux.c  pl_win.c  quakedef.h  snd_sdl.c  sys_sdl_unix.c
